--- a/AGOL/index.html
+++ b/AGOL/index.html
@@ -21,7 +21,7 @@
     <script>
       require(["esri/config", "esri/Map", "esri/views/MapView"], function(esriConfig, Map, MapView) {
 
-        esriConfig.apiKey = "YOUR_API_KEY";
+        esriConfig.apiKey = "AAPKa7ad08b659c147e8ba7b2077a5071c011fGZ-JLFOVqmp1gvPoD6JGwKnowFhBFKehabjYLuGLY1jPGVq1SYU9goEuLkl8UT";
 
         const map = new Map({
           basemap: "arcgis/topographic" // basemap styles service
