--- a/AGOL/index.html
+++ b/AGOL/index.html
@@ -21,7 +21,7 @@
     <script>
       require(["esri/config", "esri/Map", "esri/views/MapView"], function(esriConfig, Map, MapView) {
 
-        esriConfig.apiKey = "AAPK210659fb9bd14a659e8f564f45cbd392LL0SLEKaVJyPMwlCvYvaGvKbFEj4t17dEWHTiUuc_cK6DYYdbS9o73PNzzvIhbpS";
+        // esriConfig.apiKey = "AAPK210659fb9bd14a659e8f564f45cbd392LL0SLEKaVJyPMwlCvYvaGvKbFEj4t17dEWHTiUuc_cK6DYYdbS9o73PNzzvIhbpS";
 
         const map = new Map({
           basemap: "arcgis/topographic" // basemap styles service
