--- a/AGOL/map.html
+++ b/AGOL/map.html
@@ -23,7 +23,7 @@
     var geojsonLayer = L.geoJSON();
 
     // Fetch GeoJSON data (replace URL with your GeoJSON file)
-    fetch('path/to/your.geojson')
+    fetch(map.json)
       .then(response => response.json())
       .then(data => {
         // Add GeoJSON data to the layer
